--- a/index.html
+++ b/index.html
@@ -124,30 +124,44 @@
 						</div>
 			  	</div>
 			  	<div class="col-sm-3">
-			  		<div class="form-group">
-			  			<div class="form-group">
-			  			<label for="start_time">Survey start time</label>
-				  		<div class="input-group mb-3">
-							  <input type="text" class="form-control" id="start_time" aria-describedby="start_time_input">
-							  <div class="input-group-append">
-							    <span class="input-group-text" id="start_time_input"><i class="far fa-clock"></i></span>
-							  </div>
-							</div>
+
+		  			<div class="form-group">
+		  			<label for="start_time">Survey start time</label>
+			  		<div class="input-group mb-3">
+						  <input type="text" class="form-control" id="start_time" aria-describedby="start_time_input">
+						  <div class="input-group-append">
+						    <span class="input-group-text" id="start_time_input"><i class="far fa-clock"></i></span>
+						  </div>
 						</div>
-						<div class="form-group">
-			  			<label for="end_time">Survey end time</label>
-				  		<div class="input-group mb-3">
-							  <input type="text" class="form-control" id="end_time" aria-describedby="end_time_input">
-							  <div class="input-group-append">
-							    <span class="input-group-text" id="end_time_input"><i class="far fa-clock"></i></span>
-							  </div>
-							</div>
+					</div>
+					<div class="form-group">
+		  			<label for="end_time">Survey end time</label>
+			  		<div class="input-group mb-3">
+						  <input type="text" class="form-control" id="end_time" aria-describedby="end_time_input">
+						  <div class="input-group-append">
+						    <span class="input-group-text" id="end_time_input"><i class="far fa-clock"></i></span>
+						  </div>
 						</div>
-			  		</div>
+					</div>
+					<div class="form-group">
+						<label for="trunk">Trunk</label>
+						<select id="trunk" class="form-control">
+							<option selected>Choose</option>
+				 		</select>
+					</div>
+
 			  	</div>
 			  	<div class="col-sm-4">
 			  		<div class="form-group">
-					    <label for="formControlRange">Example Range input</label>
+					    <label for="formControlRange">Timeout: 30 seconds (5 rings)</label>
+					    <input type="range" class="form-control-range" id="formControlRange">
+			  		</div>
+			  		<div class="form-group">
+					    <label for="formControlRange">Channels: 9</label>
+					    <input type="range" class="form-control-range" id="formControlRange">
+			  		</div>
+			  		<div class="form-group">
+					    <label for="formControlRange">Audio volume: 25%</label>
 					    <input type="range" class="form-control-range" id="formControlRange">
 			  		</div>
 			  	</div>
