--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Phone survey</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Ubuntu:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600|Ubuntu:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="libraries/jquery.timepicker.min.css">
 	<link rel="stylesheet" href="libraries/datepicker.min.css">
+	<link rel="stylesheet" href="libraries/dropzone.css">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -225,7 +226,37 @@
 
 
 			<form action="javascript:void(0);" autocomplete="off" class="needs-validation" id="form_basic_details" novalidate>
-				basic details
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label for="survey_id">Survey ID</label>
+							<input type="text" id="survey_id" class="form-control">
+						</div>
+						<div class="form-group">
+							<label for="response_tracking">Response tracking question</label>
+							<select id="response_tracking" class="form-control">
+								<option value="1">Question 1</option>
+								<option value="1">Question 2</option>
+								<option value="1">Question 3</option>
+							</select>
+						</div>
+					</div>
+					<div class="col-sm-8">
+						<div class="form-group">
+							<label for="file_upload_input">Audio files</label>
+							<div class="file-drop-box">
+								<div class="fake-button">
+									<i class="fas fa-cloud-upload-alt"></i>
+									<h5>Drop files here</h5>
+								</div>
+								<input type="file" id="file_upload_input" class="file-input" name="file" onchange="updateFilesList()" multiple />
+							</div>
+							<ul id="files_list" class="list-group"></ul>
+						</div>
+					</div>
+				</div>
+					
+				
 			</form>
 
 		</div>
