--- a/index.html
+++ b/index.html
@@ -27,6 +27,108 @@
 			  </li>
 			</ul>
 
+<!-- 
+			<form action="">
+				<h3>DTMF design</h3>
+				<div class="row dtmf-row">
+					<div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						  	<div class="clearfix">
+									<div class="float-left">
+										<label>
+										  <input type="checkbox" class="check-custom" onclick="updateDTMFStatus(event)">
+										  <span class="check-toggle"><span class="check-mark"></span></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  	<div class="form-group">
+						  		<input type="text" class="form-control">
+						  	</div>
+						  	<div class="form-group">
+							    <select name="" id="" class="form-control">
+							    	<option value="">Option</option>
+							    </select>
+						  	</div>
+						  </div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						    <div class="clearfix">
+									<div class="float-left" style="line-height:1;">
+										<label>
+										  <input type="checkbox" class="check-custom" hidden>
+										  <span class="check-toggle"></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  </div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						    <div class="clearfix">
+									<div class="float-left" style="line-height:1;">
+										<label>
+										  <input type="checkbox" class="check-custom" hidden>
+										  <span class="check-toggle"></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  </div>
+						</div>
+					</div><div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						    <div class="clearfix">
+									<div class="float-left" style="line-height:1;">
+										<label>
+										  <input type="checkbox" class="check-custom" hidden>
+										  <span class="check-toggle"></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  </div>
+						</div>
+					</div><div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						    <div class="clearfix">
+									<div class="float-left" style="line-height:1;">
+										<label>
+										  <input type="checkbox" class="check-custom" hidden>
+										  <span class="check-toggle"></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  </div>
+						</div>
+					</div><div class="col-4">
+						<div class="card dtmf-cell">
+						  <div class="card-body">
+						    <div class="clearfix">
+									<div class="float-left" style="line-height:1;">
+										<label>
+										  <input type="checkbox" class="check-custom" hidden>
+										  <span class="check-toggle"></span>
+										</label>
+									</div>
+							    <p class="float-right">DTMF 1</p>
+							  </div>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</form>
+ -->
 			<form action="javascript:void(0);" autocomplete="off" class="needs-validation" id="form_start_survey" novalidate>
 			  <div class="form-group">
 			    <label for="survey_short_name">Survey short name</label>
@@ -275,7 +377,11 @@
 
 
 			<div id="question_forms_wrapper"></div>
+			<div id="preview" class="hide">
+				<h3>Preview</h3>
+			</div>
 
+			
 		</div>
 	</div>
 </div>
