--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 						<div class="col-sm-4">
 							<div class="form-group" id="single_trunk_channels_cont">
 						    <label for="formControlRange" class="channels-label">Channels: <i onclick="updateChannelsValue('minus')" id="channelsMinus" class="fas fa-minus"></i><span id="channelsDisplay">1</span><i onclick="updateChannelsValue('plus')" id="channelsPlus" class="fas fa-plus"></i></label>
-						    <input type="range" class="form-control-range" id="channels" min="1" max="100" value="1" onmousemove="setChannels(event)">
+						    <input type="range" class="form-control-range" id="channels" min="1" max="100" value="1" onmousemove="setChannels(event)" onclick="setChannels(event)">
 							</div>
 							<div id="multi_channels"></div>
 						</div>
